# MITRE-eCTF-Flinders2025

./: .gitignore  FreeRTOSConfig.h  LICENSE.txt  README.md  decoder_docker_build.sh  decoder_docker_flash.sh  eCTF_Crypto.drawio  softwareArchitecture.drawio
decoder/: Dockerfile  FreeRTOSConfig.h  FreeRTOS_hooks.c  Makefile  firmware.ld  project.mk  secrets.S  start.sh  startup_firmware.S
decoder/build_out/: max78000.elf
decoder/core/inc/: decoder.h  (+9 more)
decoder/inc/: simple_flash.h
decoder/scripts/: build-release.sh  build.sh  flash-docker.sh  flash-release.sh  flash.sh  program.sh
decoder/src/: host_messaging.c  simple_crypto.c
design/: pyproject.toml
design/ectf25_design/: __init__.py  encoder.py  gen_secrets.py  gen_subscription.py  global_secrets.py
design/ectf25_design.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
design/scripts/: encodeTest.sh  genGlobalSecrets.sh  listChannels.sh  sendSubscription.sh  stressTest.sh  stressTestDecode.sh  stressTestEncode.sh  sub4.sh  subscriptionTest.sh  testGenSecrets.sh  testGenSubscriptionUpdate.sh  testImplementation.sh  tester.sh  updateEctfInstall.sh
frames/: x_c0.json  x_c0123.json
scripts/: testGenSecrets.sh  testGenSubscriptionUpdate.sh
secrets/: secrets.json
testMaximSdk/AES/: Makefile  main.c
testMaximSdk/decoder/: Dockerfile  Makefile  project.mk
testRust/test/: Cargo.toml  Makefile  build.rs  memory.x  notes.txt
testRust/test/.cargo/: config.toml
testRust/test/core/: firmware.ld
testRust/test/core/src/: main.rs
testRust/test/core/src/peripherals/: mod.rs  peripherials.rs  uart.rs
tools/: pyproject.toml
tools/ectf25/: satellite.py
tools/ectf25.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tools/ectf25/tv/: __init__.py  list.py  run.py  subscribe.py
tools/ectf25/uplink/: __main__.py
tools/ectf25/utils/: __init__.py  flash.py  stress_test.py  tester.py
(+48 files in other folders)
